--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -1,14 +1,15 @@
 <nav>
   <div class="container-fluid navbar navbar-light bg-light">
     <a class="navbar-brand"><strong>Admin</strong></a>
-    <h1 *ngIf="!selectedUser">
-      <span class="badge badge-primary">{{ countUsers() }}</span> GearSilo Users
+    <h1>
+      <span class="badge badge-primary">{{ countUsers() }}</span> GearSilo Users and
+      <span class="badge badge-primary">{{ countGear() }}</span> pieces of Gear
     </h1>
   </div>
 </nav>
 <div class="container-fluid bg-light">
-  <ngb-tabset>
-    <ngb-tab title="Users">
+  <ngb-tabset >
+    <ngb-tab title="Users" (tabChange)="selectedUser = false">
       <ng-template ngbTabContent>
         <div id="userList" class="container" *ngIf="!selectedUser">
           <table class="table table-striped table-hover">
