--- a/ngGearSilo/src/app/components/profile/profile.component.css
+++ b/ngGearSilo/src/app/components/profile/profile.component.css
@@ -10,6 +10,7 @@ body{
 .main-secction{
   /* box-shadow: 10px 10px 10px; */
   /* margin: 0px; */
+  font-family: Arial, Helvetica, sans-serif;
 
 }
 .image-section{
@@ -18,12 +19,16 @@ body{
 .image-section img{
   width: 100%;
   height:250px;
+
+
+
   /* position: relative; */
 }
 .user-image{
   position: absolute;
   margin-top:-50px;
   border-radius: 25px;
+
 }
 .user-left-part{
   margin: 0px;
@@ -32,6 +37,8 @@ body{
   width:130px;
   height:130px;
   border-radius: 50%;
+  border-color: white;
+  border-style: solid;
 }
 .user-profil-part{
   padding-bottom:30px;
@@ -208,6 +215,8 @@ body{
   opacity: 1;
 
 }
+
+
 
 
 
