--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -7,14 +7,15 @@
       <div class="col-md-3 col-sm-3 col-xs-12 user-profil-part pull-left">
         <div class="row ">
           <div class="col-md-12 col-md-12-sm-12 col-xs-12 user-image text-center">
+
+            <!-- USER PROFILE IMAGE -->
             <div *ngIf="loggedInUser.imageUrl != null">
               <img src="{{loggedInUser.imageUrl}}">
-              <!-- <div *ngIf="loggedInUser.imageUrl === null">
-                <img src="{{loggedInUser.imageUrl}}"> -->
             </div>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 user-detail-section1 text-center">
-            <button data-toggle="modal" data-target="#demo" class="btn btn-defult follow "><i aria-hidden="true"></i>
+            <button data-toggle="modal" data-target="#editProfile" class="btn btn-defult follow "><i
+                aria-hidden="true"></i>
               Edit</button>
             <button class="btn btn-defult follow" data-toggle="modal" data-target="#addGear">Add</button>
           </div>
@@ -33,7 +34,7 @@
           <div class="col-md-12 user-detail-section2">
             <div class="border"></div>
             <p>Rating</p>
-            <span>{{myReservations}} <small>and 42 review</small></span>
+            <span>{{myReservations}} <small>of 42 review</small></span>
           </div>
         </div>
       </div>
@@ -71,8 +72,8 @@
                 <input *ngIf="item.active == true" (click)="onClick(item)" data-target="#updateGear" data-toggle="modal"
                   data-toggle="modal" type="submit" value="update" type="image" id="myimage"
                   src="https://i.imgur.com/Y8Uh7wI.png" />
-                <button style="float: left; margin-top: 5px; padding: 5px; font-size: 40px;" type="button" class="close btn-lg"
-                  aria-label="Close" *ngIf="item.active == true" data-toggle="modal" type="submit"
+                <button style="float: left; margin-top: 5px; padding: 5px; font-size: 40px;" type="button"
+                  class="close btn-lg" aria-label="Close" *ngIf="item.active == true" data-toggle="modal" type="submit"
                   (click)="deleteGear(item.id)"> <span aria-hidden="true">&times;</span></button>
               </div>
             </div>
@@ -151,8 +152,8 @@
           <div>
 
             <!-- EDIT USER PROFILE MODAL-->
-            <div id="demo" class="modal fade" role="dialog">
-              <div class="modal-dialog"> -->
+            <div id="editProfile" class="modal fade" role="dialog">
+              <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
                     <h4 class="modal-title">{{loggedInUser.firstName | titlecase}} {{loggedInUser.lastName | titlecase}}
@@ -160,33 +161,54 @@
                   </div>
                   <div class="modal-body">
                     <img class="img-responsive" />
-                    <input type="text" placeholder="{{loggedInUser.firstName}}" class="form-control"
-                      [(ngModel)]="editedUser.firstName">
-                    <input type="text" placeholder="{{loggedInUser.lastName}}" class="form-control"
-                      [(ngModel)]="editedUser.lastName">
-                    <input type="url" placeholder="{{loggedInUser.imageUrl}}" class="form-control"
-                      [(ngModel)]="editedUser.imageUrl">
-                    <input type="tel" placeholder="{{loggedInUser.phone}}" class="form-control"
-                      [(ngModel)]="editedUser.phone">
-                    <input type="hidden" value="{{loggedInUser.id}}" name="{{editedUser.id}}" class="form-control"
-                      [(ngModel)]="editedUser.id">
-                  </div>
 
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                    <button type="button" (click)="updateUser(editedUser)" class="btn btn-primary"
-                      data-dismiss="modal">Update</button>
+                    <!-- FIRST LAST NAMES -->
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="">First and last name</span>
+                      </div>
+                      <input type="text" class="form-control" placeholder="{{loggedInUser.firstName | titlecase}}"
+                        [(ngModel)]="editedUser.firstName">
+                      <input type="text" class="form-control" placeholder="{{loggedInUser.lastName | titlecase}}"
+                        [(ngModel)]="editedUser.lastName">
+                    </div>
+                    <br>
+
+
+                    <!-- IMAGE URL -->
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Image URL</span>
+                      </div>
+                      <input type="text" class="form-control" placeholder="{{loggedInUser.imageUrl}}"
+                        aria-label="Default" aria-describedby="inputGroup-sizing-default"
+                        [(ngModel)]="editedUser.imageUrl">
+                    </div>
+
+
+                    <!-- PHONE -->
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Phone</span>
+                      </div>
+                      <input type="text" class="form-control" [(ngModel)]="editedUser.phone"
+                        placeholder="{{loggedInUser.phone}}" aria-label="Default"
+                        aria-describedby="inputGroup-sizing-default" [(ngModel)]="editedUser.imageUrl">
+                    </div>
+
+                    <!-- HIDDEN FIELD _ USER ID -->
+                    <input type="hidden" class="form-control" value="{{loggedInUser.id}}" name="{{editedUser.id}}"
+                      [(ngModel)]="editedUser.phone" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                      <button type="button" (click)="updateUser(editedUser)" class="btn btn-primary"
+                        data-dismiss="modal">Update</button>
+                    </div>
                   </div>
                 </div>
-
               </div>
             </div>
-
-
-
-
-
-
 
 
 
@@ -205,11 +227,20 @@
                   <div class="modal-body">
 
                     <input type="text" placeholder="Name" class="form-control" [(ngModel)]="newGear.name">
-                    <input type="text" placeholder="Price" class="form-control" [(ngModel)]="newGear.price">
-                    <input type="url" placeholder="Image Url" class="form-control" [(ngModel)]="newGear.imageUrl">
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">$</span>
+                      </div>
+                      <input type="text" placeholder="Price per day" class="form-control"
+                        aria-label="Amount (to the nearest dollar)" [(ngModel)]="newGear.price">
+                      <div class="input-group-append">
+                        <span class="input-group-text">.00</span>
+                      </div>
+                    </div>
                     <input type="text" placeholder="Description" class="form-control" [(ngModel)]="newGear.description">
                     <input type="text" placeholder="Gear Condition" class="form-control"
                       [(ngModel)]="newGear.gearCondition">
+                    <input type="url" placeholder="Image Url" class="form-control" [(ngModel)]="newGear.imageUrl">
 
                     <input type="hidden" valueclass="form-control" value="{{loggedInUser.id}}" name="{{loggedInUser}" [(ngModel)]="newGear.user">
         <input type="hidden" valueclass="form-control" value=1 name=1 [(ngModel)]="newGear.active">
