--- a/ngGearSilo/src/app/components/profile/profile.component.css
+++ b/ngGearSilo/src/app/components/profile/profile.component.css
@@ -61,15 +61,18 @@ body{
   margin: 0px;
 }
 .user-detail-section2{
+  font-size:8px;
   margin-top:10px;
 }
 .user-detail-section2 span{
   color:#7CBBC3;
-  font-size: 20px;
+  font-size: 14px;
+  margin-right: 20px;
 }
 .user-detail-section2 small{
   font-size:12px;
   color:#D3A86A;
+  margin-left: 12px;
 }
 .profile-right-section{
   padding: 20px 0px 10px 15px;
@@ -208,6 +211,9 @@ body{
   margin-top: 19px;;
   margin-left: 10px;;
 
+}
+.card {
+  /* padding: 10px; */
 }
 
 .card:hover{
