--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -43,8 +43,7 @@
 
 
         <!-- MY RESERVATIONS BUTTON -->
-        <button data-toggle="modal" data-target="#myGearReservations" class="btn btn-defult"><i
-            aria-hidden="true"></i>
+        <button data-toggle="modal" data-target="#myGearReservations" class="btn btn-defult"><i aria-hidden="true"></i>
           My Gear Reservations</button>
 
 
@@ -83,9 +82,11 @@
                 <input *ngIf="item.active == true" (click)="onClick(item)" data-target="#updateGear" data-toggle="modal"
                   data-toggle="modal" type="submit" value="update" type="image" id="myimage"
                   src="https://i.imgur.com/Y8Uh7wI.png" />
+
                 <button style="float: left; margin-top: 5px; padding: 5px; font-size: 40px;" type="button"
-                  class="close btn-lg" aria-label="Close" *ngIf="item.active == true" data-toggle="modal" type="submit"
-                  (click)="deleteGear(item.id)"> <span aria-hidden="true">&times;</span></button>
+                  class="close btn-lg" aria-label="Close" *ngIf="item.active == true" data-toggle="modal"
+                  (click)="onClickDelete(item.id)" data-target="#popupDelete" ntype="submit"> <span
+                    aria-hidden="true">&times;</span></button>
               </div>
             </div>
           </div>
@@ -97,6 +98,7 @@
             </ul>
 
 
+            <!-- ********************** MODALS *************************** -->
 
 
 
@@ -262,8 +264,9 @@
                       [(ngModel)]="updatedGear.active"> -->
 
 
-                    <label style="margin-bottom: 10px;"  class="switch">
-                      <input type="checkbox" data-toggle="toggle"  checked  data-on="available" data-off="Unavailable" placeholder="{{selecteditem.gearCondition}}" [(ngModel)]="updatedGear.active">
+                    <label style="margin-bottom: 10px;" class="switch">
+                      <input type="checkbox" data-toggle="toggle" checked data-on="available" data-off="Unavailable"
+                        placeholder="{{selecteditem.gearCondition}}" [(ngModel)]="updatedGear.active">
                       <span class="slider"></span>
                     </label><br><br>
 
@@ -295,18 +298,18 @@
             <div class="modal fade" id="popupGear" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
               aria-hidden="true">
               <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
+                <div  class="modal-content">
+                  <div style="opacity: .5;" class="modal-header">
                     <h5 class="modal-title" id="exampleModalLongTitle">{{selecteditem.price | currency}} Per Day</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
-                  <div class="modal-body" id="popupGear">
+                  <div style="background-color: whitesmoke;" class="modal-body" id="popupGear">
 
                     <ul class="products">
                       <li class="crop">
-                        <img src="{{selecteditem.imageUrl}}" />
+                        <img style="opacity: 2;" src="{{selecteditem.imageUrl}}" />
                       </li>
                     </ul>
                   </div>
@@ -360,3 +363,25 @@
             </div>
           </div>
         </div>
+
+
+        <!-- ARE YOU SURE YOU WANT TO DELETE THIS MODAL -->
+        <div class="modal fade" id="popupDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+          aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+
+              </div>
+              <div class="modal-body" id="popupGear">
+                <h5>Are you sure you want to delete this item?</h5>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                  <button type="button" (click)="deleteGear()" class="btn btn-primary" data-dismiss="modal">Delete
+                    Item</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
