default gear picture changed to png file

--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -305,11 +305,11 @@
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
-                  <div style="background-color: whitesmoke;" class="modal-body" id="popupGear">
+                  <div class="modal-body" id="popupGear">
 
                     <ul class="products">
                       <li class="crop">
-                        <img style="opacity: 2;" src="{{selecteditem.imageUrl}}" />
+                        <img style="height: 90%; width: 80%; margin-left: 25px; background-color: white;" src="{{selecteditem.imageUrl}}" />
                       </li>
                     </ul>
                   </div>
