--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -65,7 +65,14 @@
 
 
           <!-- USER LIST OF ITEMS  - CARDS-->
-          <h3>Listed Items for Rent</h3>
+
+
+          <h3 style="color: dimgrey;">Listed Items for Rent</h3>
+          <div *ngIf="gearList.length === 0">
+
+            <h3 style="color: lightslategrey; z-index: 1000;">You do not have any gear items listed</h3>
+
+          </div>
           <div style="width: 100%;" class="card" *ngFor="let item of gearList; let i = index">
             <div *ngIf="item.active == true">
               <div class="card-header">
@@ -298,20 +305,21 @@
             <div class="modal fade" id="popupGear" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
               aria-hidden="true">
               <div class="modal-dialog" role="document">
-                <div  class="modal-content">
+                <div class="modal-content">
                   <div style="opacity: .5;" class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">{{selecteditem.price | currency}} Per Day</h5>
+                    <h5 style="align-self: center;" class="modal-title" id="exampleModalLongTitle">{{selecteditem.price | currency}} Per Day</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
                   <div class="modal-body" id="popupGear">
-
                     <ul class="products">
                       <li class="crop">
-                        <img style="height: 90%; width: 80%; margin-left: 25px; background-color: white;" src="{{selecteditem.imageUrl}}" />
+                        <img style="height: 90%; width: 80%; margin-left: 25px; background-color: white;"
+                          src="{{selecteditem.imageUrl}}" />
                       </li>
                     </ul>
+                    <p style="text-align-last: center;">{{selecteditem.description}}</p>
                   </div>
                 </div>
               </div>
